$Id: History,v 1.193 2002-06-24 07:34:15 gcosmo Exp $
-------------------------------------------------------------------

     =========================================================
     Geant4 - an Object-Oriented Toolkit for Simulation in HEP
     =========================================================

                      Category History file
                      ---------------------
This file should be used by G4 developers and category coordinators
to briefly summarize all major modifications introduced in the code
and keep track of all category-tags.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

     *************************************************************
     * Note that modeling and test have their own History files. *
     *************************************************************

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------

History file for visualization category
---------------------------------------

24th June 2002  Gabriele Cosmo  (vis-V04-00-10)
- Exclude latest changes to OpenGL driver (opengl-V04-00-03), causing compilation
  errors on some platforms (DEC-cxx).

23th June 2002  Satshi Tanaka  (vis-V04-00-09)
- Bug fixes in G4VRMLXFileSceneHandlerFunc.icc
- Protection of VRML-Newtork drivers for Windows platform.
  (The compilation is skipped in the Windows platform.)

19th June 2002  John Allison  (vis-V04-00-08)
- Cosmetic changes in G4VRML2FileSceneHandler.cc and G4VRML2SceneHandler.cc
  (Gabriele)

10th June 2002  John Allison
- Cosmetic changes for SUN-CC in G4OpenGLXmConvenienceRoutines.cc
  (opengl-V04-00-03).
- Improvement to /vis/scene/add/logicalVolume guidance.

6th June 2002  John Allison
- Cosmetic changes for GNU compiler in G4OpenGLXViewer.cc (opengl-V04-00-02).

8th May 2002  John Allison (vis-V04-00-07)