@@ -1,4 +1,4 @@
-$Id: History,v 1.193 2002-06-24 07:34:15 gcosmo Exp $
+$Id: History,v 1.194 2002-06-25 13:20:43 johna Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -23,6 +23,9 @@ committal in the CVS repository !
 
 History file for visualization category
 ---------------------------------------
+
+24th June 2002  John Allison
+- Further cosmetic changes in G4OpenGL for DEC compiler (opengl-V04-01-00).
 
 24th June 2002  Gabriele Cosmo  (vis-V04-00-10)
 - Exclude latest changes to OpenGL driver (opengl-V04-00-03), causing compilation
